--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     margin: 0;
     box-sizing: border-box;
 }
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto&display=swap');
 body{
     background: #F5F5F5;
     display: flexbox;
@@ -11,21 +10,28 @@ body{
 .home{
     display: flexbox;
 }
+.logo{
+    height: 180px;
+     margin-left: 50%;
+}
+.logo2{
+    display: none;
+}
 .menu-container{
-    height: 84px;
+    height: 80px;
     background: #ffffff;
     color: #EB339B;
     display: flex;
     align-items: center;
     justify-content: space-between;    
-    padding: 40px;
-    
-    
+    padding: 40px;   
 }
 .nav{
     flex-direction: column;
     align-items: center;
     text-align: center;
+    margin-right: 10%;
+    
     
 }
 .btn{
@@ -36,6 +42,7 @@ body{
     align-items: center;
     text-align: center;
     margin: 10px;
+    text-decoration: none;
     
 }
 .lista{
@@ -50,18 +57,38 @@ body{
     border-radius: 4px;
     border: 2px solid #EB339B;
 }
-.main-text{
-    vertical-align: left;
-    display: flex;
-    
+.container{
+    display: block;
+    margin-left: 25%;
 }
 .front-text{
     font-family: 'Montserrat';
     font-size: 64px;
-    
+    margin-top: 5%;
 }
 .minor-text{
+    margin-top: 1%;
     font-size: 48px;
     color: rgba(17, 17, 17, 0.48);
 }
 
+
+@media(max-width:768px){
+    .menu-container{
+        height: 200px;
+        
+    }
+
+    .logo{
+        width: 20%;
+        display: none;
+    }
+   .front-text{
+    font-size: 32px;
+    flex-shrink: 2;
+   }
+   .minor-text{
+    font-size: 24px;
+   }
+    
+}
