--- a/lista_miaus/style.css
+++ b/lista_miaus/style.css
@@ -1,3 +1,105 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;200;300;400;500;600;700&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+.container-full {
+    height: calc(100vh - 100px);
+    background: #f5f5f5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container {
+    max-width: 752px;
+    width: 90%;
+    padding: 40px;
+    margin-top: 64px;
+    border-radius: 8px;
+    font-family: 'Montserrat', sans-serif;
+    background: white;
+    box-shadow: 0 0 10px 8px lightgray;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    position: relative;
+}
+
 h1 {
-    color: blue
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 39px;
+    margin-bottom: 16px;
+}
+
+h2 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 28px;
+    margin-left: 12px;
+}
+
+.list {
+    width: 100%;
+    margin: 16px 0;
+}
+
+ul {
+    list-style: none;
+}
+
+li div{
+    width: 100%;
+    height: 88px;
+    padding: 20px 22px;
+    border-radius: 8px;
+    background: white;
+    box-shadow: 0px 4px 5px 2px lightgray;
+    display: flex;
+    align-items: center;
+}
+
+section {
+    width: 50%;
+    display: flex;
+    align-items: center;
+}
+
+section:nth-child(2) {
+    justify-content: right;
+}
+
+.btn-notes {
+    padding: 10px 20px;
+    font-family:'Roboto';
+    font-weight: 400;
+    font-size: 16px;
+    align-items: center;
+    text-align: center;
+    text-decoration: none;
+    background: #ffffff;
+    color: #EB339B;
+    border: 2px solid #EB339B;
+    border-radius: 4px;
+}
+
+@media (max-width: 480px) {
+    li div {
+        height: 170px;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    h2 {
+        margin: 0;
+    }
+
+    section:nth-child(1) {
+        flex-direction: column;
+    }
+
+    section:nth-child(2) {
+        justify-content: center;
+        margin-top: 16px;
+    }
 }
