--- a/css/style-menu.css
+++ b/css/style-menu.css
@@ -1,6 +1,8 @@
 :root {
     --rosa: #EB339B;
     --branco: #ffffff;
+    --montserrat: 'Montserrat', sans-serif;
+    --roboto: 'Roboto', sans-serif;
 }
 
 * {
