Lógica para pegar os dados do localStorage

--- a/css/style-menu.css
+++ b/css/style-menu.css
@@ -1,6 +1,7 @@
 :root {
     --rosa: #EB339B;
-    --branco: #ffffff;
+    --branco: #FFFFFF;
+    --background: #F5F5F5;
     --montserrat: 'Montserrat', sans-serif;
     --roboto: 'Roboto', sans-serif;
 }
