--- a/css/componentes/botao.css
+++ b/css/componentes/botao.css
@@ -1,19 +1,26 @@
 .botao {
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--roboto);
     font-size: 16px;
     width: 46.5%;
     height: 44px;
-    border: solid 2px #EB339B;
+    border: solid 2px var(--rosa);
     border-radius: 3px;
     cursor: pointer;
-    color: #EB339B;
+    color:var(--rosa);
 }
 
 .botao:hover {
-    background-color: #9F9F9F;
-    color: #fff;
+    background-color: var(--cinzaescuro);
+    color: var(--branco);
 }
 
 .botao:active {
-    background-color: #EB339B;
+    background-color: var(--rosa);
+}
+
+@media(max-width: 720px) {
+    .botao-responsivo {
+        display: flex;
+        flex-direction: row;
+    }
 }
