--- a/css/componentes/card.css
+++ b/css/componentes/card.css
@@ -1,16 +1,15 @@
 .card {
-    background-color: #FFFFFF;
+    background-color: var(--branco);
     border-radius: 8px;
-    box-shadow: 0 5px 10px darkgray;
+    box-shadow: 0 5px 10px var(--cinzaescuro);
     max-width: 752px;
     padding: 1.75rem;
     margin: 0 auto;
 }
 
-.container {
-    height: 60px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
+@media(max-width: 720px) {
+    .card {
+        max-width: 370px;
+        margin: 0 auto;
+    }
 }
