--- a/css/listagem.css
+++ b/css/listagem.css
@@ -38,14 +38,25 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-size: 20px;
+    font-family: var(--montserrat);
+    color: #111111;
+    font-weight: 700;
+    font-style: normal;
+    line-height: 28px;
 }
 
 .miaus-cadastrados li img {
-    max-width: 100%;
+    width: 100px;
+    height: 100px;
     margin-bottom: 20px;
+    border-radius: 100px;
 }
 
 .miaus-cadastrados li button {
+    display: flex;
+    align-items: center;
+    text-align: center;
     margin-top: 20px;
     background-color: var(--branco);
     color: var(--rosa);
@@ -65,15 +76,13 @@ body {
     color: var(--branco)
 }
 
-@media screen and (min-width: 1024px) {
+/*@media screen and (min-width: 1024px) {
     .lista-container {
         margin-left: 21.5rem;
         margin-right: 21.5rem;
         margin-top: 9.25rem;
         margin-bottom: auto;
-
-        background: var(--branco);
-        box-shadow: 0px 4px 4px rgba(51, 51, 51, 0.04), 0px 4px 16px rgba(51, 51, 51, 0.08);
+        box-shadow: 0px 4px 4px rgba(51, 51, 51, 0.20), 0px 4px 16px rgba(51, 51, 51, 0.25);
         border-radius: 8px;
     }
 
@@ -91,11 +100,29 @@ body {
         background-color: var(--rosa);
         color: var(--branco)
     }
-}
+}*/
 
 @media screen and (min-width: 768px) {
     .lista-container {
         max-width: 768px;
         margin: 4rem auto;
+        box-shadow: 0px 4px 4px rgba(51, 51, 51, 0.04), 0px 4px 16px rgba(51, 51, 51, 0.08);
+        border-radius: 8px;
+    }
+
+    .miaus-cadastrados li {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 1.5rem;
+    }
+
+    .miaus-cadastrados li span {
+        margin-right: 200px;
+    }
+
+    .miaus-cadastrados li button {
+        display: flex;
+        margin-top: 0;
     }
 }
