--- a/css/style_cadastro.css
+++ b/css/style_cadastro.css
@@ -123,3 +123,18 @@ input {
     background-color: var(--rosa);
     color: white;
 }
+@media screen and (max-width: 780px){
+    .container{
+        height: 650px;
+        width: 400px;
+    }
+    .botoes-cadastro{
+        width:150px ;
+        height: 44px;
+        margin-top: 5%;
+    }
+    #btn1{
+        padding: 11px 9px;
+    }
+
+}
