--- a/css/style_cadastro.css
+++ b/css/style_cadastro.css
@@ -1,15 +1,16 @@
 body {
     background-color:var(--cinzaclaro);
 }
-
+html{
+    min-width: 400px;
+}
 .container{
     background-color:  var(--branco);
+    width: 50%;
     position: absolute;
-    top: 50%;
+    top: 55%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 532px;
-    width: 752px;
     text-align: center;
     margin-top: 62px;
     box-shadow: 0px 4px 4px rgba(51, 51, 51, 0.04), 0px 4px 16px rgba(51, 51, 51, 0.08);
@@ -29,8 +30,6 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    
-
 }
   
 .input-file {
@@ -97,7 +96,7 @@ input {
     border-radius: 4px;
 }
 .botoes-cadastro{
-    width:324px ;
+    width:324px;
     height: 44px;
     font-family: var(--roboto);
     font-size: 16px;
@@ -122,4 +121,36 @@ input {
 #btn2.btn-preenchido {
     background-color: var(--rosa);
     color: white;
+}
+
+@media screen and (max-width:1340px){
+    
+    .container{
+        display: flex;
+        flex-direction: column;
+        padding-top: 30px;
+    
+    }
+    #btn1{
+        margin-right: 0;
+    }
+    #btn2{
+        margin-top: 20px;
+        margin-left: 0;
+    }
+}
+
+@media screen and (max-width:768px){
+    .container{
+        width: 100%;
+        margin-right: 0;
+    }   
+}
+@media screen and (max-width) {
+
+        .container{
+            width: 100%;
+            position: absolute;
+        }
+
 }
