--- a/css/style_cadastro.css
+++ b/css/style_cadastro.css
@@ -140,17 +140,10 @@ input {
     }
 }
 
-@media screen and (max-width:768px){
+@media screen and (max-width: 780px){
     .container{
-        width: 100%;
-        margin-right: 0;
-    }   
-}
-@media screen and (max-width) {
-
-        .container{
-            width: 100%;
-            position: absolute;
-        }
-
+        top: 62%;
+        height: 650px;
+        width: 400px;
+    }
 }
