--- a/css/lancamentos_notas.css
+++ b/css/lancamentos_notas.css
@@ -62,7 +62,7 @@ body {
     height: 1px;
 }
 .seta {
-    background-image: url(/assets/arrow_left_purple.png);
+    background-image: url(../assets/arrow_left_purple.png);
     background-repeat: no-repeat;
     background-size: 80%;
     background-position: center;
@@ -75,12 +75,12 @@ body {
 
 .seta:hover {
     background-color: var(--cinzaescuro);
-    background-image: url(/assets/arrow_left_white.png);
+    background-image: url(../assets/arrow_left_white.png);
 }
 
 .seta:active {
     background-color: var(--rosa);
-    background-image: url(/assets/arrow_left_white.png);
+    background-image: url(../assets/arrow_left_white.png);
 }
 
 /*fim componentes*/
@@ -152,7 +152,7 @@ body {
 }
 
 .pata {
-    background: url('/assets/pata-nao-pintada-menor.png') no-repeat;
+    background: url('../assets/pata-nao-pintada-menor.png') no-repeat;
     background-size: 100%;
     width: 45px;
     height: 42px;
@@ -160,7 +160,7 @@ body {
 }
 
 .containerPatas:hover .on::before {
-    content: url("/assets/pata-pintada-menor.png");
+    content: url("../assets/pata-pintada-menor.png");
 }
 
 .pata:hover~.on::before {
@@ -177,7 +177,7 @@ body {
 }
 
 .containerPatas li.active {
-    background: url("/assets/pata-pintada-menor.png") no-repeat;
+    background: url("../assets/pata-pintada-menor.png") no-repeat;
     background-size: 100%;
 }
 
